infrastructure/cluster-template/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forseti-security-1e88-app
  labels:
    type: endpoints-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: forseti-security-1e88-app
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=8081",
          "--backend=127.0.0.1:8080",
          "--service=$(JWT_AUDIENCE)",
          "--rollout_strategy=managed",
        ]
        livenessProbe:
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8081
        ports:
          - name: http
            containerPort: 8081
      - name: forseti-security-1e88-app
        image: gcr.io/forseti-security-1e88/forseti-visualizer
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
